--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "build": "^0.1.4",
+    "firebase": "^11.0.1",
     "i18next": "^23.12.2",
-    "next": "14.2.4",
+    "next": "^14.2.16",
     "next-i18next": "^15.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.10",
     "react-i18next": "^15.0.0",
     "wavesurfer.js": "^7.8.2"
   },
